# RCVM

./: .clang-format  CMakeLists.txt  RcObject.h  compiler_defs.h  conanfile.py  debug_util.h  eval_stack.h  exception.h  gc.h  inst_parser.h  instruction.h  instructions.hpp  logger.h  main.cpp  rc_object.h  rcvm.h  stack_frame.h  symbol_table.hpp  vm_parser.h
.github/workflows/: build.yml
include/: code_segment.h  compiler_defs.h  debug_util.h  eval_stack.h  gc.h  instructions.hpp  logger.h  pc.h  rc_object.h  rcvm.h  stack_frame.h  symbol_table.h  vm_parser.h
src/: CMakeLists.txt  code_segment.cpp  debug_util.cpp  eval_stack.cpp  gc.cpp  main.cpp  pc.cpp  rcvm.cpp  symbol_table.cpp  vm_accept.cpp  vm_parser.cpp
test/: CMakeLists.txt  helper.h  test_eval_stack.cpp  test_gc.cpp  test_object.cpp  test_symbol_table.cpp  test_vm.cpp
